# LAB_OTTICA_22_23

./: CMakeLists.txt  README.md  relazione.dvi
ME1/carica_elettrone/latex/: relazione.aux  relazione.fdb_latexmk  relazione.fls  relazione.tex  relazione.toc
ME1/interferometro_michelson/latex/: relazione.fdb_latexmk  relazione.fls  relazione.out  relazione.tex  relazione.toc
ME1/rapporto_e_m/latex/: relazione.aux  relazione.fdb_latexmk  relazione.fls  relazione.out  relazione.tex  relazione.toc
ME1/spettrometro_prisma/latex/: relazione.aux  relazione.fdb_latexmk  relazione.fls  relazione.out  relazione.tex  relazione.toc
ME1/spettrometro_prisma/src/: gmon.out  main  makefile
ME1/spettrometro_reticolo/latex/: relazione.aux  relazione.fdb_latexmk  relazione.fls  relazione.out  relazione.tex  relazione.toc
lab_fisica_moderna/: CMakeLists.txt
lab_fisica_moderna/carica_elettrone/latex/: relazione.aux  relazione.tex  table.tex
lab_fisica_moderna/carica_elettrone/src/: main.cpp
lab_fisica_moderna/interferometro_michelson/latex/: relazione.tex
lab_fisica_moderna/rapporto_e_m/latex/: relazione.tex
lab_fisica_moderna/rapporto_e_m/src/: main.cpp
lab_fisica_moderna/spettrometro_reticolo/latex/: relazione.aux  relazione.fdb_latexmk  relazione.fls  relazione.tex
lab_fisica_moderna/velocita_luce/src/: main.cpp  makefile
tools/: physim.hpp  physim2.hpp
tools/latex/: lab_report_template.tex
tools/plots/: compare_results_horizontal.py  compare_results_vertical.py  lin_regression_errors.py  linear_regression_errors.py  measurements_error_bars.py
(+86 files in other folders)
