add_executable(carica_elettrone carica_elettrone/src/main.cpp)

add_executable(interferometro_michelson interferometro_michelson/src/main.cpp)

add_executable(rapporto_e_m rapporto_e_m/src/main.cpp)

# add_executable(spettrometro_prisma spettrometro_prisma/src/main.cpp)
# target_include_directories(spettrometro_prisma PUBLIC /usr/local/include/scipp)

# add_executable(spettrometro_reticolo spettrometro_reticolo/src/main.cpp)
# target_include_directories(spettrometro_reticolo PUBLIC /usr/local/include/scipp)

# add_executable(velocita_luce velocita_luce/src/main.cpp)
# target_include_directories(velocita_luce PUBLIC /usr/local/include/scipp)